# ai4eosc-exercises

./: Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
ai4eosc_exercises/: README.md  __init__.py  config.py  utils.py
ai4eosc_exercises/data/: create_dataset.py
api/: __init__.py  config.py  responses.py  schemas.py  utils.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: .gitignore
models/my_model/: model_parameters.yml
notebooks/: 1.0-ai4eosc_exercises_start.ipynb
tests/data/: test_dataset_1.txt  test_dataset_2.txt
tests/test_metadata/: test_requirements.py
tests/test_predictions/: conftest.py  test_requirements.py
