[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4eosc-exercises-api"
authors = [
    { name = "Author Example", email = "author@example.com" },
]
description = "AI4EOSC Exercises for good practices."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/deephdc/ai4eosc-exercises-api"
"Bug Tracker" = "https://github.com/deephdc/ai4eosc-exercises-api/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "AI4EOSC_EXERCISES_DATA_PATH=tests/data",
    "AI4EOSC_EXERCISES_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [
    "ai4eosc_exercises",
    "ai4eosc_exercises.api",
]

[tool.setuptools.package-dir]
"ai4eosc_exercises.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
ai4eosc_exercises = "ai4eosc_exercises.api"
